# flinklib

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: MunkeiVersionFromGit.cmake  flinkConfig.cmake  flinkConfig.cmake.in  git.cmake
doc/: Doxyfile.in  build.md  flink_test_base_devices.md  overview.md  tests.md  utils.md
doc/images/: DevProcessFPGA.odg  DevProcessProcessor.odg  LibraryAPIs.odg  SystemArchitectureExample.odg  flinkOverview.odg  flinkOverviewLibLite.odg  flinkOverviewLinux.odg
include/: flink_funcid.h  flinkioctl.h  flinkioctl_cmd.h  flinklib.h
lib/: CMakeLists.txt  ain.c  aout.c  base.c  counter.c  dio.c  error.c  error.h  flink.c  info.c  interrupt.c  log.h  lowlevel.c  ppwa.c  pwm.c  reflectivSensoren.c  reflectiveSensor.c  reflectiveSensoren.c  stepperMotor.c  subdevtypes.c  types.h  valid.c  valid.h  wd.c
test/: CMakeLists.txt  base_device_test.c  counter.c  gpio.c  gpio_test.c  open_close.c  pwm.c  read_write.c  subDevice_viewer.c
utils/: CMakeLists.txt  flinkanaloginput.c  flinkanalogoutput.c  flinkcounter.c  flinkdio.c  flinkinfo.c  flinkinterrupthandler.c  flinkinterruptmultiplexer.c  flinkppwa.c  flinkpwm.c  flinkreflectivesensoren.c  flinkreflectivsensoren.c  flinksteppermotor.c  flinkwd.c  lsflink.c
